use polyomino to fix some issues

--- a/examples/grid_view_widget.ipynb
+++ b/examples/grid_view_widget.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import traitlets"
+    "import traitlets\n",
+    "from six import text_type"
    ]
   },
   {
@@ -33,9 +34,16 @@
     "        )\n",
     "\n",
     "class TextCell(Text):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super(TextCell, self).__init__(*args, **kwargs)\n",
-    "        self.continuous_update = False\n"
+    "    displaytype = text_type\n",
+    "    def __init__(self, *arg, **kwargs):\n",
+    "        super(TextCell, self).__init__(*arg, **kwargs)\n",
+    "        self.continuous_update = False\n",
+    "\n",
+    "class AddableTextCell(TextCell):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super(AddableTextCell, self).__init__(**kwargs)\n",
+    "        self.add_class('addable_cell')\n",
+    "    "
    ]
   },
   {
@@ -155,31 +163,7 @@
     "    def remove_cell(obj, pos, dirty={}):\n",
     "        obj = ObjectWithProperties(obj.value)\n",
     "        del obj.value[pos]\n",
-    "        return obj\n",
-    "    \n",
-    "    def set_cell(self, pos, value):\n",
-    "        i,j = pos\n",
-    "        if i > len(self.value):\n",
-    "            return False\n",
-    "        if i == len(self.value) and j != 0:\n",
-    "            return False\n",
-    "        if j > len(self.value[i]):\n",
-    "            return False\n",
-    "        self.value[i][j] = self.display_to_cell(value)\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class AddableTextCell(TextCell):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(AddableTextCell, self).__init__(**kwargs)\n",
-    "        self.add_class('addable_cell')\n",
-    "    "
+    "        return obj"
    ]
   },
   {
@@ -226,9 +210,10 @@
     "                    )\n",
     "        )\n",
     "\n",
-    "    def clear_class_widget(self, widget):\n",
+    "    def clear_class_widget(self, widget, ignore=()):\n",
     "        for classname in self.classes:\n",
-    "            widget.remove_class(classname)"
+    "            if classname not in ignore:\n",
+    "                widget.remove_class(classname)"
    ]
   },
   {
@@ -271,6 +256,11 @@
     "        self.cell_widget_class = cell_widget_class\n",
     "        self.addable_widget_class = addable_widget_class\n",
     "        \n",
+    "        try:\n",
+    "            self.displaytype = cell_widget_class.displaytype\n",
+    "        except:\n",
+    "            self.displaytype = None # Stateless cells\n",
+    "        \n",
     "        self.properties = []\n",
     "        \n",
     "        self.draw()\n",
@@ -293,6 +283,7 @@
     "    def add_property(self, prop):\n",
     "        if prop not in self.properties:\n",
     "            self.properties.append(prop)\n",
+    "            self.apply_properties()\n",
     "\n",
     "    def set_property_attr(self, prop, attr, value):\n",
     "        self.add_property(prop)\n",
@@ -303,7 +294,7 @@
     "\n",
     "        for pos in self.cells:\n",
     "            widget = self.get_cell_widget(pos)\n",
-    "            self.style_placeholder.clear_class_widget(widget)\n",
+    "            self.style_placeholder.clear_class_widget(widget, ignore=('addable_cell','removable_cell'))\n",
     "            for p in self.properties:\n",
     "                for v in props[pos]:\n",
     "                    if p.has_property(*v):\n",
@@ -338,7 +329,7 @@
     "\n",
     "        last = -1\n",
     "        for i,elem in enumerate(self.vbox.children):\n",
-    "            if len(elem.children) == 1 and elem.children[0] == self.empty_cell:\n",
+    "            if len(elem.children) != 1 or elem.children[0] != self.empty_cell:\n",
     "                last = i\n",
     "        if last+1 != len(self.vbox.children):\n",
     "            self.vbox.children = self.vbox.children[:last+1]\n",
@@ -376,7 +367,7 @@
     "        addable_cells = self.addable_cells()\n",
     "        \n",
     "        for pos in list(self.cell_pos_to_cell_uid):\n",
-    "            if pos not in self.cells and pos not in addable_cells:\n",
+    "            if pos not in self.cells and pos not in addable_cells: \n",
     "                self.remove_cell_widget(pos)\n",
     "        \n",
     "        for pos in addable_cells:\n",
@@ -384,15 +375,21 @@
     "                self.set_cell_widget(pos, self.addable_widget_class(), 'add_%d_%d' % pos)\n",
     "        \n",
     "        for pos in self.cells:\n",
-    "            old_widget = self.get_cell_widget(pos)\n",
-    "            if not old_widget or old_widget.value != str(self.cells[pos]):\n",
-    "                widget = self.cell_widget_class(str(self.cells[pos]))\n",
-    "                self.set_cell_widget(pos, widget, 'cell_%d_%d' % pos)\n",
-    "            \n",
-    "        for pos in removable_cells:\n",
     "            widget = self.get_cell_widget(pos)\n",
-    "            if widget:\n",
+    "            new_value = self.adapter.cell_to_display(self.cells[pos], self.displaytype)\n",
+    "            if type(widget) != self.cell_widget_class or widget.value != new_value:\n",
+    "                widget = self.cell_widget_class(new_value)\n",
+    "                self.set_cell_widget(pos, widget, 'cell_%d_%d' % pos)\n",
+    "            elif widget.value != new_value:\n",
+    "                widget.value = new_value\n",
+    "            if pos in removable_cells:\n",
     "                widget.add_class('removable_cell')\n",
+    "                if issubclass(self.cell_widget_class, ToggleButton):\n",
+    "                    widget.disabled = False\n",
+    "            else:\n",
+    "                widget.remove_class('removable_cell')    \n",
+    "                if issubclass(self.cell_widget_class, ToggleButton):\n",
+    "                    widget.disabled = self.cell_widget_class(True).disabled\n",
     "                \n",
     "        self.last_addable_position = addable_cells\n",
     "        self.apply_properties()\n",
@@ -465,6 +462,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "g.value = ObjectWithProperties( {(0,0):2,(0,1):4} )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "PropOdd = Property('odd')\n",
     "PropMin = Property('min')\n",
     "PropInc = Property('diag_inc')\n",
@@ -481,6 +487,93 @@
     "    g.add_property(p)\n",
     "g.set_property_attr(PropOdd, 'background-color', 'green')\n",
     "g.set_property_attr(PropMin, 'color', 'red')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sage.all import ParallelogramPolyomino, DyckWords\n",
+    "from sage_widget_adapters.combinat.parallelogram_polyomino_grid_view_adapter import ParallelogramPolyominoGridViewAdapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ParallelogramPolyominoAdapter(ParallelogramPolyominoGridViewAdapter):\n",
+    "    @staticmethod\n",
+    "    def get_bounce_cells_from_pp(pp):\n",
+    "        ret = []\n",
+    "        x,y = 0,-1\n",
+    "        for i,v in enumerate(pp.bounce_path()):\n",
+    "            dx,dy = (1,0) if i & 1 else (0,1) \n",
+    "            for j in range(v):\n",
+    "                x,y = x+dx, y+dy\n",
+    "                ret.append((i,(x,y)))\n",
+    "        return ret\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_properties(obj):\n",
+    "        props = {}\n",
+    "        \n",
+    "        # Values of the bounce path\n",
+    "        for i,pos in ParallelogramPolyominoAdapter.get_bounce_cells_from_pp(obj):\n",
+    "            props[pos] = [('bounce0', True)]\n",
+    "\n",
+    "        return props"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp = ParallelogramPolyomino.from_dyck_word(DyckWords(10).random_element())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DisabledButton(ToggleButton):\n",
+    "    def __init__(self, value, *args, **kwargs):\n",
+    "        super(DisabledButton, self).__init__(*args, **kwargs)\n",
+    "        self.disabled = True \n",
+    "        self.value = value\n",
+    "\n",
+    "class AddableButton(ToggleButton):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(AddableButton, self).__init__(*args, **kwargs)\n",
+    "        self.add_class('addable_cell')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp = StyledGridView(pp, ParallelogramPolyominoAdapter(), cell_layout=cell_layout, \n",
+    "                    cell_widget_class=DisabledButton, \n",
+    "                    addable_widget_class=AddableButton)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp"
    ]
   }
  ],
