fix style precedence

--- a/examples/grid_view_widget.ipynb
+++ b/examples/grid_view_widget.ipynb
@@ -199,7 +199,7 @@
     "    def write(self):\n",
     "        self.value = (\n",
     "            '<style>%s</style>'\n",
-    "            % '\\n'.join( '.{0}, .widget-text.{0} input {{{1}}}'.format(\n",
+    "            % '\\n'.join( '.{0}, button.{0}, .widget-text.{0} input {{{1}}}'.format(\n",
     "                        classname,\n",
     "                        ';'.join('%s:%s'\n",
     "                                 % c\n",
@@ -296,6 +296,8 @@
     "            widget = self.get_cell_widget(pos)\n",
     "            self.style_placeholder.clear_class_widget(widget, ignore=('addable_cell','removable_cell'))\n",
     "            for p in self.properties:\n",
+    "                if pos not in props:\n",
+    "                    continue\n",
     "                for v in props[pos]:\n",
     "                    if p.has_property(*v):\n",
     "                        widget.add_class(p.get_css_name())\n",
@@ -575,6 +577,24 @@
    "source": [
     "gp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PropBounce = Property('bounce0')\n",
+    "gp.add_property(PropBounce)\n",
+    "gp.set_property_attr(PropBounce, 'background-color', 'red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
