use sage last release (vs dev branch)

--- a/examples/ParalleloPolyomino.ipynb
+++ b/examples/ParalleloPolyomino.ipynb
@@ -31,7 +31,8 @@
    "outputs": [],
    "source": [
     "pp = ParallelogramPolyomino.from_dyck_word(DyckWords(20).random_element())\n",
-    "pp.plot()"
+    "# Need sagemath>=8.9\n",
+    "# pp.plot()"
    ]
   },
   {
@@ -129,21 +130,21 @@
  "metadata": {
   "celltoolbar": "Aucun(e)",
   "kernelspec": {
-   "display_name": "SageMath 8.9.beta4",
+   "display_name": "SageMath 8.8",
    "language": "sage",
    "name": "sagemath"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   },
   "rise": {
    "auto_select": "code",
