--- a/examples/grid_view_widget.ipynb
+++ b/examples/grid_view_widget.ipynb
@@ -25,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On refait les widgets sans les paramètres de positions (et tooltip) \n",
+    "# pour simplifier mais avec des classes css en plus\n",
     "class Cell(Widget):\n",
     "    css_classes = ('grid_cell',)\n",
     "    def __init__(self, *arg, **kwargs):\n",
@@ -85,6 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Une propriété se construit à partir de son nom et d'un paramètre\n",
+    "# Pour définir une classe css, on affine en rajoutant une condition sur le paramètre\n",
     "class Property:\n",
     "    def __init__(self, basename, cond=lambda x: x):\n",
     "        self.basename = basename\n",
@@ -108,6 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Objet exemple\n",
     "class ObjectWithProperties:\n",
     "    def __init__(self, values):\n",
     "        self.value = dict(values)\n"
@@ -129,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adapter pour l'objet exemple\n",
     "class ObjectGridViewAdapter(GridViewAdapter):\n",
     "    objclass = ObjectWithProperties\n",
     "    celltype = int\n",
@@ -139,6 +145,7 @@
     "        cells = { (i,j):obj.value[i,j] for i,j in obj.value }\n",
     "        return cells\n",
     "    \n",
+    "    # On définit ici les propriétés des cellules de l'objet\n",
     "    @staticmethod\n",
     "    def get_properties(obj):\n",
     "        values = obj.value\n",
@@ -147,22 +154,22 @@
     "\n",
     "        for i,j in values:\n",
     "            prop_list = []\n",
-    "            # prop1\n",
+    "            # prop1: valeur impaire\n",
     "            if values[i,j] & 1:\n",
     "                prop_list.append(('odd', True))\n",
     "\n",
-    "            # prop2\n",
+    "            # prop2: minimum local\n",
     "            for x,y in ((0,1),(0,-1), (1,0), (-1,0)):\n",
     "                if (i+x,j+y) in values and values[i+x,j+y] < values[i,j]:\n",
     "                    break\n",
     "            else:\n",
     "                prop_list.append(('min', True))\n",
     "\n",
-    "            # prop3\n",
+    "            # prop3: plus petit que la valeur en bas à droite\n",
     "            if (i+1,j+1) in values and values[i+1,j+1] > values[i,j]:\n",
     "                prop_list.append(('diag_inc', True))\n",
     "\n",
-    "            # prop4\n",
+    "            # prop4: valeur entre 0 et 3, de paramètre la valeur en question\n",
     "            if 0 <= values[i,j] < 4:\n",
     "                prop_list.append(('type', values[i,j]))\n",
     "\n",
@@ -187,13 +194,11 @@
     "        return list(obj.value)\n",
     "    \n",
     "    def add_cell(self, obj, pos, value, dirty={}):\n",
-    "        print(\"adapt_add_cell\", pos, value, dirty)\n",
     "        obj = ObjectWithProperties(obj.value)\n",
     "        obj.value[pos] = value\n",
     "        return obj\n",
     "    \n",
-    "    #@staticmethod\n",
-    "    def remove_cell(obj, pos, dirty={}):\n",
+    "    def remove_cell(self, obj, pos, dirty={}):\n",
     "        obj = ObjectWithProperties(obj.value)\n",
     "        del obj.value[pos]\n",
     "        return obj"
@@ -205,52 +210,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Objet <style> pour gérer le style de classe DOM\n",
     "class StylePlaceHolder(HTML):\n",
     "    def __init__(self):\n",
     "        super(StylePlaceHolder, self).__init__()\n",
     "        self.classes = {}\n",
     "\n",
-    "    def set_class(self, classname, attr, value):\n",
+    "    def set_class(self, classnames, attr, value):\n",
     "        if value is None:\n",
-    "            return remove_class_attribute(classname, attr)\n",
-    "        if type(classname) == str:\n",
-    "            classname = (classname,)\n",
-    "        self.classes.setdefault(classname,{})[attr] = value\n",
+    "            return remove_class_attribute(classnames, attr)\n",
+    "        if type(classnames) == str:\n",
+    "            classnames = (classnames,)\n",
+    "        self.classes.setdefault(classnames,{})[attr] = value\n",
     "        self.write()\n",
     "\n",
-    "    def remove_class_attribute(self, classname, attr):\n",
-    "        if type(classname) == str:\n",
-    "            classname = (classname,)\n",
-    "        if classname in self.classes:\n",
-    "            if attr in self.classes[classname]:\n",
-    "                del self.classes[classname][attr]\n",
-    "            if not self.classes[classname]:\n",
-    "                del self.classes[classname]\n",
+    "    def remove_class_attribute(self, classnames, attr):\n",
+    "        if type(classnames) == str:\n",
+    "            classnames = (classnames,)\n",
+    "        if classnames in self.classes:\n",
+    "            if attr in self.classes[classnames]:\n",
+    "                del self.classes[classnames][attr]\n",
+    "            if not self.classes[classnames]:\n",
+    "                del self.classes[classnames]\n",
     "        self.write()\n",
     "\n",
-    "    def remove_class(self, classname):\n",
-    "        if classname in self.classes:\n",
-    "            del self.classes[classname]\n",
+    "    def remove_class(self, classnames):\n",
+    "        if classnames in self.classes:\n",
+    "            del self.classes[classnames]\n",
     "        self.write()\n",
     "\n",
     "    def write(self):\n",
     "        self.value = (\n",
     "            '<style>%s</style>'\n",
     "            % '\\n'.join( '.{0} {2}{{{1}}}'.format(\n",
-    "                        '.'.join(classname),\n",
+    "                        '.'.join(classnames),\n",
     "                        ';'.join('%s:%s'\n",
     "                                 % c\n",
-    "                                 for c in self.classes[classname].items()\n",
+    "                                 for c in self.classes[classnames].items()\n",
     "                                ),\n",
-    "                        'input' if 'text_cell' in classname else ''\n",
+    "                        'input' if 'text_cell' in classnames else ''\n",
     "                       )\n",
-    "                     for classname in self.classes\n",
+    "                     for classnames in self.classes\n",
     "                    )\n",
-    "        )\n",
-    "\n",
-    "    def clear_class_widget(self, widget):\n",
-    "        for classname in self.classes:\n",
-    "            widget.remove_class(classname)"
+    "        )"
    ]
   },
   {
@@ -268,6 +270,8 @@
     "        if w.widgets[u] == w:\n",
     "            return u\n",
     "\n",
+    "# Copie partielle des fonction de GridViewWidget en intégrant une feuille de style en en-tête.\n",
+    "# Contient des attributs potentiellement inutiles qui restent d'une ancienne version\n",
     "class StyledGridView(GridViewEditor, VBox, ValueWidget):\n",
     "    def __init__(self, obj, adapter=None, display_convention='en', cell_layout=Layout(),\n",
     "                 cell_widget_class=TextCell, addable_widget_class=AddableTextCell, **kwargs):\n",
@@ -303,6 +307,8 @@
     "        self.draw()\n",
     "        self.donottrack = False\n",
     "        \n",
+    "        # style de base, peut être faudrait il rajouter l'instance de l'objet comme classe\n",
+    "        # englobante pour ne pas appliquer le style d'objet StyledGridView précédent dans le notebook\n",
     "        self.style_placeholder.set_class(Cell.css_classes, 'margin', '0')\n",
     "        self.style_placeholder.set_class(Cell.css_classes, 'padding', '0')\n",
     "        \n",
@@ -325,11 +331,8 @@
     "                                         'background-color',\n",
     "                                         'white'\n",
     "                                        )\n",
-    "        for attr, val in (('border','1px'), ('solid','#999'), ('color','#666')):\n",
-    "            self.style_placeholder.set_class(AddableButton.css_classes, attr, val)\n",
-    "                                         at,\n",
-    "                                         '#666'\n",
-    "                                        )\n",
+    "        for attr, val in (('border','1px solid #999'), ('color','#666')):\n",
+    "            self.style_placeholder.set_class(ButtonCell.css_classes, attr, val)\n",
     "        \n",
     "    def cast(self, value):\n",
     "        try:\n",
@@ -342,22 +345,23 @@
     "            self.properties.append(prop)\n",
     "            self.apply_properties()\n",
     "\n",
+    "    # fonction bas niveau pour rajouter du style aux cellules vérifiant la propriété `prop`\n",
     "    def set_property_attr(self, prop, attr, value):\n",
     "        self.add_property(prop)\n",
     "        self.style_placeholder.set_class(self.cell_widget_class.css_classes + (prop.get_css_name(),), attr, value)\n",
     "\n",
+    "    # routine pour définir les class des widgets cellules qui sont relatives aux propriétés\n",
     "    def apply_properties(self):\n",
     "        props = self.adapter.get_properties(self.value)\n",
     "\n",
     "        for pos in self.cells:\n",
     "            widget = self.get_cell_widget(pos)\n",
-    "            #self.style_placeholder.clear_class_widget(widget, ignore=('addable_cell','removable_cell'))\n",
     "            for p in self.properties:\n",
     "                widget.remove_class(p.get_css_name())\n",
     "                if pos not in props:\n",
     "                    continue\n",
-    "                for v in props[pos]:\n",
-    "                    if p.has_property(*v):\n",
+    "                for prop_name, value in props[pos]:\n",
+    "                    if p.has_property(prop_name, value):\n",
     "                        widget.add_class(p.get_css_name())\n",
     "                        break\n",
     "\n",
@@ -426,28 +430,38 @@
     "        removable_cells = self.removable_cells()\n",
     "        addable_cells = self.addable_cells()\n",
     "        \n",
+    "        # suppression des cellules maintenant vides\n",
     "        for pos in list(self.cell_pos_to_cell_uid):\n",
     "            if pos not in self.cells and pos not in addable_cells: \n",
     "                self.remove_cell_widget(pos)\n",
     "        \n",
+    "        # ajout des nouvelles cellules addable\n",
     "        for pos in addable_cells:\n",
     "            if pos not in self.last_addable_position:\n",
     "                self.set_cell_widget(pos, self.addable_widget_class(), 'add_%d_%d' % pos)\n",
     "        \n",
+    "        # traitement des cellules de l'objet\n",
     "        for pos in self.cells:\n",
+    "            # on récupère l'ancien widget s'il existe\n",
     "            widget = self.get_cell_widget(pos)\n",
     "            new_value = self.adapter.cell_to_display(self.cells[pos], self.displaytype)\n",
+    "            # s'il n'existe pas, ou n'est pas du bon type, ou n'a pas la bonne valeur, on le remplace\n",
     "            if type(widget) != self.cell_widget_class or widget.value != new_value:\n",
     "                widget = self.cell_widget_class(new_value)\n",
     "                self.set_cell_widget(pos, widget, 'cell_%d_%d' % pos)\n",
+    "            # si seule la valeur change, on ne réinstancie pas l'objet, on change juste sa valeur\n",
     "            elif widget.value != new_value:\n",
     "                widget.value = new_value\n",
+    "            # on ajoute la classe 'removable_cell' à ce qui peut l'être\n",
     "            if pos in removable_cells:\n",
     "                widget.add_class('removable_cell')\n",
+    "                # comme grid_view_widget, dans le cas de ToggleButton, on l'active\n",
     "                if issubclass(self.cell_widget_class, ToggleButton):\n",
     "                    widget.disabled = False\n",
     "            else:\n",
     "                widget.remove_class('removable_cell')    \n",
+    "                # j'admets que s'il s'agit d'un ToggleButton, alors il est surement désactivé normalement\n",
+    "                # mais c'est probablement faux dans le cas général\n",
     "                if issubclass(self.cell_widget_class, ToggleButton):\n",
     "                    widget.disabled = self.cell_widget_class(True).disabled\n",
     "                \n",
